cleaning up multi if block statement in Brand component, cleaning up styled-components names

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             rel="stylesheet"
         />
 
-        <title>React App</title>
+        <title>preyemer: a photography e-commerce site</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
